--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/rrodwell/Flashcard-Generator#readme",
   "dependencies": {
     "inquirer": "^3.0.6",
+    "prompt": "^1.0.0",
     "require": "^2.4.20"
   }
 }
